# Helsinki-public-transport-simulation

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  simulation_chart.xml  tick_diagram.xml
notebooks/: gtfs_route_experiments.ipynb  gtfs_schedule_experiment.ipynb  placeholder.ipynb
tests/: __init__.py  test_agent.py  test_route_fetching.py  test_transit_simulation.py
tests/test_data/simulation_1/: env_speed_limit.geojson  routes.geojson  schedule.csv
tests/test_data/simulation_2/: schedule.csv
tests/test_data/simulation_3/: routes.geojson  schedule.csv  snapshots.geojson  snapshots.gpkg
tests/test_data/simulation_4/: routes.geojson  schedule.csv  simulation_extent.geojson
tests/test_data/simulation_5/: schedule.csv  snapshots.geojson  snapshots.gpkg
tests/test_data/speed_data_digi/: test_speed_data.geojson
tests/test_data/test_route_1/: sampleroute.geojson  test_route_1.dbf  test_route_1.geojson  test_route_1.shp  test_route_1.shx
transit_simulation/: __init__.py  agent.py  api.py  cli.py  congestion_model.py  nearest_bus.py  read_speed_limit_at_location.py  route.py  simulation.py  transit_simulation.py  vehicle.py
web/: readme.txt
